hphp/test/zend/good/Zend/tests/foreach_undefined.php.expectf
Notice: Undefined variable: a in %s/foreach_undefined.php on line 3

Fatal error: Uncaught exception 'InvalidForeachArgumentException' with message 'Invalid argument supplied for foreach()' in %s:3
Stack trace:
%A
